@startuml

title __SERVICES's Class Diagram__\n

  namespace nl.han.oose.jellema.rick.services {
    class nl.han.oose.jellema.rick.services.Cache {
        - cache : HashMap<String, UserDTO>
        + addToCache()
        + getUser()
        + userExists()
    }
  }
  

  namespace nl.han.oose.jellema.rick.services {
    class nl.han.oose.jellema.rick.services.LoginService {
        + checkAuthentication()
        + setCacheService()
        + setTokenDealerService()
        - authenticateUserPasswords()
    }
  }
  

  namespace nl.han.oose.jellema.rick.services {
    class nl.han.oose.jellema.rick.services.PlaylistService {
        + addTrack()
        + createPlaylist()
        + deletePlaylist()
        + deleteTrack()
        + editPlaylist()
        + getPlaylists()
        + getTracksOfPlaylist()
        + setCacheService()
        + setPlaylistsDao()
        + setTracksDao()
    }
  }
  

  namespace nl.han.oose.jellema.rick.services {
    class nl.han.oose.jellema.rick.services.TokenDealer {
        - uuidSupplier : Supplier<UUID>
        + aquireToken()
    }
  }
  

  namespace nl.han.oose.jellema.rick.services {
    class nl.han.oose.jellema.rick.services.TracksService {
        + getTracksNotInPlaylist()
        + setCache()
        + setDao()
    }
  }
  

  nl.han.oose.jellema.rick.services.Cache .up.|> nl.han.oose.jellema.rick.services.interfaces.ICache
  nl.han.oose.jellema.rick.services.LoginService .up.|> nl.han.oose.jellema.rick.services.interfaces.ILoginService
  nl.han.oose.jellema.rick.services.LoginService o-- nl.han.oose.jellema.rick.services.interfaces.ICache : cache
  nl.han.oose.jellema.rick.services.LoginService o-- nl.han.oose.jellema.rick.services.interfaces.ITokenDealer : dealer
  nl.han.oose.jellema.rick.services.PlaylistService .up.|> nl.han.oose.jellema.rick.services.interfaces.IPlaylistService
  nl.han.oose.jellema.rick.services.PlaylistService o-- nl.han.oose.jellema.rick.services.interfaces.ICache : cache
  nl.han.oose.jellema.rick.services.PlaylistService o-- nl.han.oose.jellema.rick.data.dao.interfaces.IPlaylistsDao : playlistsDao
  nl.han.oose.jellema.rick.services.PlaylistService o-- nl.han.oose.jellema.rick.data.dao.interfaces.ITracksDao : tracksDao
  nl.han.oose.jellema.rick.services.TokenDealer .up.|> nl.han.oose.jellema.rick.services.interfaces.ITokenDealer
  nl.han.oose.jellema.rick.services.TracksService .up.|> nl.han.oose.jellema.rick.services.interfaces.ITracksService
  nl.han.oose.jellema.rick.services.TracksService o-- nl.han.oose.jellema.rick.services.interfaces.ICache : cache
  nl.han.oose.jellema.rick.services.TracksService o-- nl.han.oose.jellema.rick.data.dao.interfaces.ITracksDao : dao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
